@@ -47,3 +47,7 @@ versionlib_SCRIPTS = \
 	rpm.daily rpm.log rpm.xinetd \
 	symclash.py symclash.sh tgpg u_pkg.sh \
 	vpkg-provides.sh vpkg-provides2.sh
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = rpm.pc
+
