@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: install a pkg-config(1) specification "rpm.pc" for correctly linking against the RPM C API
     - rse: consistently move libraries from Automake _LDFLAGS to _LIBADD variables
     - rse: move misc/*.c from rpmio/stubs.c into misc/librpmmisc.c and build regular librpmmisc.la
     - rse: support building without ZLib via --without-zlib
